--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <h1>Contact Us</h1>
     <form action="https://formsubmit.co/uphani021@gmail.com" method="POST">
         <input type="text" name="name" placeholder="Name" required>
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="tel" name="phone" placeholder="Phone">
+        <input type="text" name="lover name" placeholder="lover name" required>
+        <input type="text" name="chatting time" placeholder="chatting time">
         <textarea name="message" placeholder="Message" rows="5" required></textarea>
         <button type="submit">Submit</button>
       </form>
